--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,8 @@
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/joy": "^5.0.0-beta.52",
     "@mui/material": "^6.4.4",
     "@mui/styled-engine-sc": "^6.4.3",
     "@mui/x-charts": "^7.26.0",
@@ -34,7 +35,8 @@
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.3",
     "redux-persist": "^6.0.0",
-    "styled-components": "^6.1.15"
+    "styled-components": "^6.1.15",
+    "tailwind-scrollbar-hide": "^4.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.67",
