--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "vite",
     "dev": "vite",
-    "build": "tsc && npx vite build",
+    "build": "tsc && node node_modules/vite/bin/vite.js build",
     "preview": "vite preview",
     "format": "prettier . --write",
     "format:check": "prettier . --check",
