--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "flowbite-react-template-vite",
+  "name": "ilearnweb",
   "private": true,
   "version": "0.0.0",
   "type": "module",
